working on LV of method references